scribble-test/src/test/resources/bad/syntax/disamb/modules/Modules02.scr
module bad.syntax.disamb.modules.Modules02;


type <java> "java.lang.String" from "rt.jar" as String;
type <java> "java.lang.String" from "rt.jar" as String;
